Add missing BindTexture in PaintCanvasVideoRenderer.

PaintCanvasVideoRenderer::CopyVideoFrameSingleTextureToGLTexture
runs TexImage2D without first binding the target texture.
This could result in the clobbering of other textures.

BUG=787333,710673

Change-Id: Ieff4c3f6068ad3682b3bd356491b6979624dfd66
Reviewed-on: https://chromium-review.googlesource.com/781422
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Victor Miura <vmiura@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518408}
Former-commit-id: 9300c95d365861c2f0165787bff9fd03e1f6d1ed